--- a/components/hj5ncebpd-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/hj5ncebpd-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hj5ncebpd-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-18071bc970.hea2.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:433e79acca28e61a95580552446b2a183fe2b116@sha256:c90b8e18ebc89988a7c627f6398350a022d3f13ffc4e423e3e0598509924dfd8
+          name: container-image
